# DestructiveFarm

./: .gitignore  Dockerfile  Dockerfile.alpine  LICENSE.txt  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_image.yml  docker.yml  test_image.yml
client/: pocodio.py  requirements.txt  spl_example.py  spl_example_runme.py  sploit_w_data.py  start_sploit.py
docs/: docker.md  exploit_format.md  faq.md  farm_client.md  farm_server.md
docs/en/: exploit_format.md  faq.md  farm_client.md  farm_server.md
docs/ru/: exploit_format.md  faq.md  farm_client.md  farm_server.md  index.md
server/: Dockerfile  MessageAnnouncer.py  __init__.py  api.py  auth.digest  auth.py  config.py  database.py  docker-compose.yml  metrics.py  models.py  nginx.conf  nginx.conf.nossl  reloader.py  requirements.txt  schema.sql  spam.py  standalone.py  start_server.sh  submit_loop.py  views.py
server/protocols/: ccit.py  dummy.py  forcad_tcp.py  netcat.py  ructf.py  ructf_http.py  ructf_tcp.py  unict.py  unilulz.py  volgactf.py
server/ssl/: gencert.sh
server/static/css/: style.css
server/static/js/: ui.js
server/templates/: index.html  sploitTable.html
tests/mock_checksystem/: mock_checksystem.py
tests/mock_sploit/: spl_heavy.py  spl_realtime_output.py
tests/mock_sploits/: spl_heavy.py  spl_realtime_output.py
